# locale

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  now.json
api/: Cargo.toml
api/src/: main.rs
index/: Cargo.toml
index/src/: main.rs
src/: api.rs  index.rs  main.rs  test.rs
templates/: index.hbs
